Fixed a bug where long descritpions dont wrap on the homework sets editor 2 page and some gateways didn't have their descriptoins shown.

--- a/htdocs/themes/math4/math4.css
+++ b/htdocs/themes/math4/math4.css
@@ -294,7 +294,8 @@ ul.courses-list a:hover {
     white-space:nowrap;
 }
 
-.label-with-edit-icon .set-label {
+.label-with-edit-icon .set-label,
+.label-with-edit-icon div.tooltip {
     white-space:normal;
 }
 
